<resources>
    <string name="app_name">MascotApp</string>
    <string name="tab_listado">Listado</string>
    <string name="tab_map">Mapa</string>
    <string name="str_encontre_una_mascota">Encontre una Mascota</string>
    <string name="str_perdi_mi_mascota">Perdi Mi Mascota</string>
    <string name="str_buscar_mascotas_perdidas">Buscar Mascotas Perdidas</string>
    <string name="str_mis_publicaciones">Mis Publicaciones</string>
    <string name="page_title">MascotApp</string>
    <string name="buscar_mascota">Buscar Mascota</string>
    <string name="mascotas_buscadas">Mascotas Buscadas</string>
    <string name="mis_publicaciones">Mis Publicaciones</string>
    <string name="plus">+</string>

    <string name="card_descripcion_mascota">Descripcion Mascota</string>
    <string name="card_ver_detalles">INFO</string>
    <string name="card_title">Titulo de Tarjeta</string>
    <string name="card_secondary_text">Texto Secundario de Tarjeta</string>
    <string name="card_commentary_text">Comentario Lorem Ipsum is simply dummy text of the printing and typesetting indus…</string>
    <string name="card_me_perdi_en">ME PERDI EN</string>
    <string name="card_pet_name">Pet Name</string>
    <string name="card_pet_sex_and_age">HEMBRA - 2 AÑOS</string>
    <string name="card_publication_lost_date">24/11/2021</string>

    <string name="prefs_file">com.utn.MascotApp.PREFERENCES_FILE_KEY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="TipoMascota">
        <item>Perro</item>
        <item>Gato</item>
    </string-array>
    <string-array name="TamañoMascota">
        <item>Grande</item>
        <item>Mediano</item>
        <item>Chico</item>
    </string-array>
    <string-array name="SexoMascota">
        <item>Macho</item>
        <item>Hembra</item>
    </string-array>
    <string-array name="RazaMascotaVacio">
        <item>Raza</item>
    </string-array>
    <string-array name="RazaMascotaPerro">
        <item>Mestizo</item>
        <item>Afgano</item>
        <item>Airedale Terrier</item>
        <item>Akita</item>
        <item>American Stafford Terrier</item>
        <item>Basenji</item>
        <item>Basset</item>
        <item>Beagle</item>
        <item>Bichon Frisse</item>
        <item>Bloodhound</item>
        <item>Border Collie</item>
        <item>BORDER COLLIE</item>
        <item>Boston Terrier</item>
        <item>Boxer</item>
        <item>Boyero De Berna</item>
        <item>Braco</item>
        <item>Breton</item>
        <item>bull dog frances</item>
        <item>Bull Dog Ingles</item>
        <item>Bull Terrier</item>
        <item>Bullmastiff</item>
        <item>Cairn Terrier</item>
        <item>Cane Corso</item>
        <item>Caniche</item>
        <item>cavalier king charles spaniel</item>
        <item>Chihuahua</item>
        <item>Chow Chow</item>
        <item>Cocker</item>
        <item>Collie</item>
        <item>CRESTADO CHINO</item>
        <item>Dalmata</item>
        <item>Doberman</item>
        <item>Dogo</item>
        <item>Dogo De Burdeos</item>
        <item>Earlier Terrier</item>
        <item>Faraon</item>
        <item>Fila Brasilero</item>
        <item>Fox Terrier</item>
        <item>Galgo</item>
        <item>Golden</item>
        <item>Gran Danes</item>
        <item>Grifon De Bruselas</item>
        <item>Jack Russell</item>
        <item>Jindo Coreano</item>
        <item>Kuvasz</item>
        <item>Labrador</item>
        <item>Lasha Apso</item>
        <item>lebrel</item>
        <item>Malamute</item>
        <item>Maltes</item>
        <item>Mastiff Ingles</item>
        <item>Mastin Español</item>
        <item>Mastin Napolitano</item>
        <item>Ovejero Aleman</item>
        <item>Ovejero Belga</item>
        <item>Ovejero Tervueren</item>
        <item>Papillon</item>
        <item>Pastor Australiano</item>
        <item>Pastor De Brie</item>
        <item>pastor del caucaso</item>
        <item>Pastor Escoces</item>
        <item>Pastor Ingles</item>
        <item>Pastor Suizo</item>
        <item>Pequines</item>
        <item>perro de agua español</item>
        <item>Pila</item>
        <item>Pincher</item>
        <item>Pit Bull</item>
        <item>Pointer</item>
        <item>pomerania</item>
        <item>Presa Canario</item>
        <item>Pug</item>
        <item>Rodhesian</item>
        <item>Rottweiler</item>
        <item>Salchicha</item>
        <item>Samoyedo</item>
        <item>San Bernardo</item>
        <item>Schnautzer Grande</item>
        <item>Schnautzer Mini</item>
        <item>Schnautzer Standar</item>
        <item>Scottish Terrier</item>
        <item>Setter Irlandes</item>
        <item>Sharpei</item>
        <item>Shiba Inu</item>
        <item>Shitzu</item>
        <item>Siberiano</item>
        <item>Springer Spaniel Ingles</item>
        <item>Terranova</item>
        <item>Vizla</item>
        <item>Weimaraner</item>
        <item>Welsh Corgi</item>
        <item>Welsh Terrier</item>
        <item>West Highland White</item>
        <item>Whippet</item>
        <item>Yorkshire Terrier</item>
    </string-array>

    <string-array name="RazaMascotaGato">
        <item>Angora</item>
        <item>Bengal</item>
        <item>bosques de noruega</item>
        <item>Himalayo</item>
        <item>Mestizo</item>
        <item>Persa</item>
        <item>Ragdoll</item>
        <item>Sagrado De Birmania</item>
        <item>Siames</item>
    </string-array>
    <string name="hint_resource">MascotApp</string>
    <string name="tipo_de_mascota">Tipo de mascota</string>
    <string name="camara">Camara</string>
    <string name="color">Color</string>
    <string name="edad">Edad</string>
    <string name="seleccionar_fecha">Fecha</string>
    <string name="mi_ubicacion">Mi ubicacion</string>
    <string name="perfil_nombre_y_apellido">Nombre y Apellido</string>
    <string name="perfil_telefono">Teléfono</string>
    <string name="perfil_direccion">Dirección</string>
    <string name="perfil_mail">Mail</string>
    <string name="perfil_mis_mascotas">Mis Mascotas</string>
    <string name="perfil_mis_publicaciones">Mis Publicaciones</string>
    <string name="perfil_ver_todo">Ver Todo</string>
    <string name="perfil_agregar_mascotas">Agregar</string>
    <string name="perfil_mi_perfil">Mi Perfil</string>
    <string name="perfil_editar_perfil">Editar Perfil</string>
    <string name="perfil_guardar_cambios">Guardar Cambios</string>
    <string name="auth_logout">Cerrar Sesion</string>
    <string name="navbar_home">Home</string>
    <string name="navbar_publicar">Publicar</string>
    <string name="navbar_miPerfil">Mi Perfil</string>
    <string name="hola_login">Hola,</string>
    <string name="bienvenido_login">Bienvenido/a!</string>
    <string name="aun_no_tienes_una_cuenta">Aun no tienes una cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="nombrebotonsiguiente">Siguiente</string>
    <string name="nombrebotonatras">Atras</string>
    <string name="subir_foto">Subir Foto</string>
    <string name="pasos1">pasos!</string>
    <string name="pasos2">pasos2</string>
    <string name="pasos3">Pasos3</string>
    <string name="direccion">Direccion</string>
    <string name="numero">Numero</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="descripci_n">Descripción</string>
    <string name="publicar">Publicar</string>
    <string name="nombre_de_la_masocta">Nombre de la Masocta</string>
    <string name="nombre_ejemplo">Nombre Ejemplo</string>
    <string name="tipo_mascota">Tipo Mascota</string>
    <string name="raza_mascota">Raza Mascota</string>
    <string name="sexo">Sexo</string>
    <string name="tama_o">Tamaño</string>
    <string name="image_access_error">No puedes acceder a tus imágenes</string>
    <string name="udpate_user_confirmation_alert">¿Esta seguro que quiere actualizar sus datos de perfil?</string>
    <string name="udpate_user_confirmation_alert_title">Cambiar datos de perfil</string>
    <string name="udpate_user_confirmation_alert_ok">Si</string>
    <string name="udpate_user_confirmation_alert_cancel">No</string>
    <string name="udpate_user_success_toast">Sus datos se han actualizado correctamente</string>
    <string name="udpate_user_fail_toast">Hubo un error al actualizar sus datos, por favor reintentelo nuevamente</string>
    <string name="su_publicacion_se_genero_con_exito">Su publicación se generó con éxito.</string>
    <string name="su_publicacion_se_elimino_con_exito">Su publicación se eliminó con éxito</string>
    <string name="encontre_una_mascota">Encontre una mascota</string>
    <string name="perdi_una_mascota">Perdi una mascota</string>

</resources>