<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/button_perdi_mi_mascota"
        android:icon="@drawable/outline_search_24"
        android:title="@string/str_perdi_mi_mascota"
        android:contentDescription="@string/mascotas_buscadas"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/button_encontre_una_mascota"
        android:icon="@drawable/outline_location_on_24"
        android:title="@string/str_encontre_una_mascota"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/button_mis_publicaciones"
        android:icon="@drawable/outline_search_24"
        android:title="@string/str_mis_publicaciones"
        android:contentDescription="@string/mis_publicaciones"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/button_buscar_mascotas_perdidas"
        android:icon="@drawable/outline_search_24"
        android:title="@string/str_buscar_mascotas_perdidas"
        android:contentDescription="@string/str_buscar_mascotas_perdidas"
        app:showAsAction="ifRoom"
        />


</menu>