<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/button_encontre_una_mascota"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_encontre_una_mascota"
        app:layout_constraintBottom_toTopOf="@+id/button_perdi_mi_mascota"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_mis_publicaciones"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_mis_publicaciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_buscar_mascotas_perdidas"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_buscar_mascotas_perdidas"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_buscar_mascotas_perdidas"
        app:layout_constraintBottom_toTopOf="@+id/button_mis_publicaciones"
        app:layout_constraintTop_toBottomOf="@+id/button_perdi_mi_mascota"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/button_perdi_mi_mascota"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_perdi_mi_mascota"
        app:layout_constraintBottom_toTopOf="@+id/button_buscar_mascotas_perdidas"
        app:layout_constraintTop_toBottomOf="@+id/button_encontre_una_mascota"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>