<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardPreventCornerOverlap="false"
    style="@style/Widget.App.CardView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/card_imagen_mascota"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            app:srcCompat="@drawable/golden"
            android:scaleType="fitXY"
            android:contentDescription="@string/card_descripcion_mascota"
            />


        <!-- Title, secondary and supporting text -->
        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_imagen_mascota"
            android:layout_marginTop="8dp"
            android:layout_marginStart="14dp"
            android:layout_alignParentStart="true"
            android:text="@string/card_title"
            android:textAppearance="?attr/textAppearanceBody1"
            />
        <TextView
            android:id="@+id/card_secondary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/card_imagen_mascota"
            android:layout_alignParentEnd="false"
            android:text="@string/card_secondary_text"
            android:layout_alignEnd="@+id/card_imagen_mascota"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            />

        <!-- Buttons -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/card_ver_detalles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/card_secondary_text"
            android:layout_alignParentEnd="true"
            android:text="@string/card_ver_detalles"
            />

        <!-- Media -->
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Card.Media" />


    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>