<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    tools:context=".Filtros">


    <ImageView
        android:id="@+id/pasos1"
        android:layout_width="276dp"
        android:layout_height="127dp"
        android:src="@drawable/filtros_pasos1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        android:contentDescription="@string/pasos1"
        />



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/button_app_bar"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        android:background="@color/blue_grey_300"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/petName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="340dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:hint="@string/nombre_de_la_masocta"
        android:singleLine="true"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/petTypeText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="340dp"
        android:layout_height="80dp"
        android:hint="@string/tipo_mascota"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petName"
        android:autofillHints="@string/color"
        app:layout_constraintVertical_bias="0">

        <AutoCompleteTextView
            android:id="@+id/petType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/petBreedText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="340dp"
        android:layout_height="85dp"
        android:hint="@string/raza_mascota"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petTypeText"
        android:autofillHints="@string/color"
        app:layout_constraintVertical_bias="0"
        app:helperText="*Primero elegir &quot;Tipo Mascota&quot;">

        <AutoCompleteTextView
            android:id="@+id/petBreed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/petSexText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:autofillHints="@string/color"
        android:hint="@string/sexo"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petBreedText"
        app:layout_constraintVertical_bias="0">

        <AutoCompleteTextView
            android:id="@+id/petSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/petAge"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:hint="@string/edad"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petBreedText"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/petSizeText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:autofillHints="@string/color"
        android:hint="@string/tama_o"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petSexText"
        app:layout_constraintVertical_bias="0">

        <AutoCompleteTextView
            android:id="@+id/petSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/petColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:hint="@string/color"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petAge"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_button_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petSizeText"
        app:layout_constraintVertical_bias="0">
        <RadioButton
            android:id="@+id/perdiUnaMascota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perdi_una_mascota"
            app:layout_constraintTop_toBottomOf="@+id/petSizeText"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="594dp"
            style="@style/Widget.App.RadioButton"/>

        <RadioButton
            android:id="@+id/encontreUnaMascota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encontre_una_mascota"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="594dp"
            style="@style/Widget.App.RadioButton"/>

    </RadioGroup>





    <Button
        android:id="@+id/bottonSiguienteAPhoto"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/estilo_botones"
        android:text="@string/nombrebotonsiguiente"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>